# form_recognizer

./: README.md  docker-compose.yaml  pyproject.toml
app/: Dockerfile  main.py  requirements.txt  script.py  utils.py  validators.py
app/core/: __init__.py  config.py  db.py  db_data.json
