[tool.poetry]
name = "form-recognizer"
version = "0.1.0"
description = ""
authors = ["Serg <ser5olovjew@yandex.ru>"]
readme = "README.md"
packages = [{include = "form_recognizer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pymongo = "^4.6.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
